--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
   padding: 0;
 }
 
-.player-wrapper {
+/* .player-wrapper {
   width: 100%;
   height: 100%;
   flex: 1 1 80%;
@@ -25,7 +25,7 @@ body, html {
   flex: 1 1 20%;
 
   min-width: 340px;
-}
+} */
 
 .twitch-player-wrapper {
   width: 100%;
