--- a/style.css
+++ b/style.css
@@ -11,22 +11,6 @@ body, html {
   padding: 0;
 }
 
-/* .player-wrapper {
-  width: 100%;
-  height: 100%;
-  flex: 1 1 80%;
-
-  border-right: 3px solid var(--color-twitch-dark-background);
-}
-
-.twitch-wrapper {
-  width: 100%;
-  height: 100%;
-  flex: 1 1 20%;
-
-  min-width: 340px;
-} */
-
 .twitch-player-wrapper {
   width: 100%;
   height: 20%;
@@ -40,4 +24,21 @@ body, html {
 .iframe {
   width: 100%;
   height: 100%;
+}
+
+.gutter {
+  background-color: #333;
+
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+
+.gutter.gutter-vertical {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
+  cursor: row-resize;
+}
+
+.gutter.gutter-horizontal {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
+  cursor: col-resize;
 }
